tests/models/enum/unnamed/f64/fail/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        f64
    ),
}
fn main() {}
